# yocto-mirrors_gitlab_kleidi_kleidicv

./: .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  SECURITY.md
adapters/opencv/: CMakeLists.txt  doc-opencv.md  intrinsiccv_hal.cpp  intrinsiccv_hal.h  kleidicv_hal.cpp  kleidicv_hal.h  opencv-4.10.patch  opencv-4.11.patch  opencv-4.12.patch  opencv-4.13-gaussianblur.patch  opencv-4.13.patch  opencv-4.9.patch  opencv-5.x.patch
adapters/opencv/extra_benchmarks/: opencv-4.10.patch  opencv-4.11.patch  opencv-4.12.patch  opencv-4.13.patch  opencv-4.9.patch
benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp
conformity/opencv/: CMakeLists.txt  README.md  common.h  manager.cpp  opencv-4.13-fast-math-rounding.patch  special_floats.h  subordinate.cpp  test_add_padding_by_copy.cpp  test_binary_op.cpp  test_binary_op.h  test_blur_and_downsample.cpp  test_build_optical_flow_pyr_lk_pyramid.cpp  test_calc_optical_flow_pyr_lk.cpp  test_cvtcolor.cpp  test_cvtcolor.h  test_exp.cpp  test_exp.h  test_float_conv.cpp  test_float_conv.h  test_float_to_int.cpp  test_float_to_int.h  test_gaussian_blur.cpp  test_gaussian_blur.h  test_in_range.cpp  test_median_blur.cpp  test_min_max.cpp  test_min_max.h  test_morphology.cpp  test_optical_flow.cpp  test_optical_flow_lk_pyramid.cpp  test_remap.cpp  test_resize.cpp  test_resize.h  test_rgb2yuv.cpp  test_rgb2yuv.h  test_rgb_to_yuv420p.cpp  test_rgb_to_yuv422.cpp  test_rotate.cpp  test_scale.cpp  test_scale.h  (+15 more)
examples/extract_one_operation/: CMakeLists.txt  example_usage.c  sme_gaussian_blur.cpp  sme_gaussian_blur_api.h
examples/extract_one_operation/kleidicv/: config.h
examples/threading/: CMakeLists.txt  README.md  main.cpp
intrinsiccv/: CMakeLists.txt
intrinsiccv/include/: config.h  ctypes.h  debug.h  dispatch.h  intrinsiccv.h  neon.h  neon_intrinsics.h  operations.h  sve2.h  traits.h  types.h  unsafe.h  utils.h
intrinsiccv/include/arithmetics/: transpose.h
intrinsiccv/include/containers/: stack.h
intrinsiccv/include/conversions/: gray_to_rgb.h  merge.h  rgb_to_rgb.h  split.h  yuv_to_rgb.h
intrinsiccv/include/filters/: gaussian_blur.h  sobel.h
intrinsiccv/include/intrinsiccv/: config.h  config.h.in  ctypes.h  debug.h  dispatch.h  intrinsiccv.h  neon.h  neon_intrinsics.h  operations.h  sve2.h  traits.h  types.h  unsafe.h  utils.h
intrinsiccv/include/morphology/: workspace.h
intrinsiccv/include/resize/: resize.h
intrinsiccv/include/workspace/: borders.h  separable.h
intrinsiccv/src/: supported-types.md
intrinsiccv/src/analysis/: canny_neon.cpp  count_nonzeros_neon.cpp  min_max_api.cpp  min_max_loc_neon.cpp  min_max_neon.cpp
intrinsiccv/src/arithmetics/: absdiff_api.cpp  absdiff_neon.cpp  absdiff_sme2.cpp  absdiff_sve2.cpp  add_abs_with_threshold_api.cpp  add_abs_with_threshold_neon.cpp  add_abs_with_threshold_sc.h  add_abs_with_threshold_sme2.cpp  add_abs_with_threshold_sve2.cpp  add_api.cpp  add_neon.cpp  add_sme2.cpp  add_sve2.cpp  multiply_api.cpp  multiply_neon.cpp  multiply_sve2.cpp  scale_api.cpp  scale_neon.cpp  sub_api.cpp  sub_neon.cpp  sub_sme2.cpp  sub_sve2.cpp  threshold_api.cpp  threshold_neon.cpp  threshold_sc.h  threshold_sme2.cpp  threshold_sve2.cpp  transpose_api.cpp  transpose_neon.cpp
intrinsiccv/src/conversions/: float_conv_api.cpp  float_conv_neon.cpp  float_conv_sc.h  float_conv_sme2.cpp  float_conv_sve2.cpp  float_to_int_api.cpp  float_to_int_neon.cpp  float_to_int_sc.h  float_to_int_sme2.cpp  float_to_int_sve2.cpp  gray_to_rgb_api.cpp  gray_to_rgb_neon.cpp  gray_to_rgb_sc.h  gray_to_rgb_sme2.cpp  gray_to_rgb_sve2.cpp  merge_api.cpp  merge_neon.cpp  rgb_to_rgb_api.cpp  rgb_to_rgb_neon.cpp  rgb_to_rgb_sc.h  rgb_to_rgb_sme2.cpp  rgb_to_rgb_sve2.cpp  split_api.cpp  split_neon.cpp  yuv_to_rgb_api.cpp  yuv_to_rgb_neon.cpp  yuv_to_rgb_sc.h  yuv_to_rgb_sme2.cpp  yuv_to_rgb_sve2.cpp
intrinsiccv/src/filters/: gaussian_blur_api.cpp  gaussian_blur_neon.cpp  gaussian_blur_sc.h  gaussian_blur_sme2.cpp  gaussian_blur_sve2.cpp  sobel_api.cpp  sobel_neon.cpp  sobel_sc.h  sobel_sme2.cpp  sobel_sve2.cpp
intrinsiccv/src/morphology/: morphology_api.cpp  morphology_neon.cpp  morphology_sc.h  morphology_sme2.cpp  morphology_sve2.cpp
intrinsiccv/src/resize/: resize_api.cpp  resize_linear_api.cpp  resize_linear_neon.cpp  resize_linear_sc.h  resize_linear_sme2.cpp  resize_linear_sve2.cpp  resize_neon.cpp  resize_sc.h  resize_sme2.cpp  resize_sve2.cpp
kleidicv/: CMakeLists.txt
kleidicv/include/kleidicv/: config.h.in  ctypes.h  debug.h  sc.h  (+23 more)
kleidicv/src/: device_capabilities.cpp  dispatch_sme.cpp  dispatch_sve2.cpp  supported-types.md
kleidicv_opencv/: CMakeLists.txt  README.md
test/: CMakeLists.txt  test_config.h.in
test/api/: CMakeLists.txt  multithreading_fake.cpp  multithreading_std_thread.cpp  multithreading_std_thread.h  test_add_abs_with_threshold.cpp  test_add_padding_by_copy.cpp  test_bitwise_and.cpp  test_blur_and_downsample.cpp  test_build_optical_flow_pyr_lk_pyramid.cpp  test_canny.cpp  test_compare.cpp  test_count_nonzeros.cpp  test_exp.cpp  test_float_conv.cpp  test_float_to_int.cpp  test_gaussian_blur.cpp  test_in_range.cpp  test_median_blur.cpp  test_merge.cpp  test_min_max.cpp  test_morphology.cpp  test_optical_flow.cpp  test_optical_flow_pyr_lk.cpp  test_optical_flow_pyr_lk_pyramid.cpp  test_remap.cpp  test_resize_linear.cpp  test_resize_to_quarter.cpp  test_rgb_and_gray.cpp  test_rgb_to_yuv.cpp  test_rgb_to_yuv420p.cpp  test_rgb_to_yuv420sp.cpp  test_rgb_to_yuv422.cpp  test_rgb_to_yuv444.cpp  test_rgb_to_yuv_420_p.cpp  test_rgb_to_yuv_420_sp.cpp  test_rotate.cpp  test_rotate_thread.cpp  test_saturating_absdiff.cpp  test_saturating_add.cpp  test_saturating_multiply.cpp  (+41 more)
test/framework/: CMakeLists.txt  abstract.h  array.h  border.cpp  border.h  generator.h  kernel.h  operation.h  special_floats.h  test_array2d.cpp  test_border.cpp  test_generator.cpp  test_kernel.cpp  test_main.cpp  types.h  utils.cpp  utils.h
test/patches/: googletest.patch
test/unit_neon/: CMakeLists.txt  test_resize_linear_generic_u8.cpp  test_utils.cpp
(+474 files in other folders)
